--- a/README.org
+++ b/README.org
@@ -23,10 +23,12 @@
 # * Introdução
 
 Este repositório contém a fonte em LaTeX dos slides, testes e provas
-dos meus cursos de Cálculo 2 e Cálculo 3 do semestre 2020.2 da UFF -
+dos meus cursos de Cálculo 2 e Cálculo 3 do semestre 2021.1 da UFF -
 que por conta da pandemia acontece(u) de fevereiro a junho de 2021.
 
-Páginas dos cursos (com links pra todos os PDFs e vídeos): [[http://angg.twu.net/2020.2-C2.html][C2]], [[http://angg.twu.net/2020.2-C2.html][C3]].
+Páginas dos cursos (com links pra todos os PDFs e vídeos): [[http://angg.twu.net/2021.1-C2.html][C2]], [[http://angg.twu.net/2021.1-C2.html][C3]].
+
+[[http://angg.twu.net/2021aulas-por-telegram.html][Sobre aulas por Telegram]].
 
 [[http://angg.twu.net/contact.html][Como entrar em contato comigo]].
 
@@ -63,14 +65,14 @@ tar -cvzf /tmp/2021-1.tgz $(cat /tmp/2021-1.fls)
 cd ~/2021-1-C2-C3/
 tar -xvzf /tmp/2021-1.tgz
 
-  git init
-  git add README.org
+# git init
+# git add README.org
   git add $(cat /tmp/2021-1.fls)
 # git commit -m "Initial commit."
 
 # git branch -M main
 # git remote add origin https://github.com/edrx/2021-1-C2-C3.git
-# git push -u origin main
+  git push -u origin main
 
 git add README.org
 git commit -m "Small changes."
