--- a/2021-1-C2-somas-1-dicas.tex
+++ b/2021-1-C2-somas-1-dicas.tex
@@ -21,16 +21,26 @@
 % (find-LATEX "2019.mk")
 % (find-CN-aula-links "2021-1-C2-somas-1-dicas" "2" "c2m211somas1d" "c2sod")
 %
-% Video 1:
+% «video-1»  (to ".video-1")
+% (c2m211somas1da "video-1")
 % (find-ssr-links "c2m211somas1d" "2021-1-C2-somas-1-dicas" "pCD1p9FZYdI")
 % (code-video     "c2m211somas1dvideo" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-1-dicas.mp4")
 % (find-c2m211somas1dvideo "0:00")
+% (find-c2m211somas1dvideo "0:49" "na aula passada várias pessoas disseram que não tão entendendo nada")
+% (find-c2m211somas1dvideo "0:52" "e que os vídeos que eu fiz não tão ajudando nada")
+% (find-c2m211somas1dvideo "3:35" "eu nunca iria descobrir ... somatórios")
+% (find-c2m211somas1dvideo "3:43" "a gente supõe que os alunos sabem determinadas coisas")
+% (find-c2m211somas1dvideo "14:09" "dica 7")
 %
-% Video 2:
+% «video-2»  (to ".video-2")
+% (c2m211somas1da "video-2")
 % (find-ssr-links "c2m211somas1d2" "2021-1-C2-somas-1-dicas-2" "Q0dxniyVZuA")
 % (code-video    "c2m211somas1d2video" "$S/http/angg.twu.net/eev-videos/2021-1-C2-somas-1-dicas-2.mp4")
 % (find-c2m211somas1d2video "0:00")
 
+% «.video-1»			(to "video-1")
+% «.video-2»			(to "video-2")
+%
 % «.defs»			(to "defs")
 % «.title»			(to "title")
 % «.telegram-2021jun23»		(to "telegram-2021jun23")
@@ -138,6 +148,7 @@ Eduardo Ochs - RCN/PURO/UFF
 \url{http://angg.twu.net/2021.1-C2.html}
 
 \end{center}
+
 
 \newpage
 
@@ -298,6 +309,37 @@ claríssima e que elas devem estudar com você, isso é bom sinal. {\sl
   GA é um curso de escrita matemática:} se você estiver estudando e
 descobrir que uma solução sua pode ser reescrita de um jeito bem
 melhor, não hesite ---\ColorRed{ reescrever é um ótimo exercício}.
+
+
+\newpage
+
+{\bf Videos}
+
+Video 1:
+
+{\footnotesize
+
+\url{http://angg.twu.net/eev-videos/2021-1-C2-somas-1-dicas.mp4}
+
+\url{https://www.youtube.com/watch?v=pCD1p9FZYdI}
+
+}
+
+\msk
+
+Video 2:
+
+{\footnotesize
+
+\url{http://angg.twu.net/eev-videos/2021-1-C2-somas-1-dicas-2.mp4}
+
+\url{https://www.youtube.com/watch?v=Q0dxniyVZuA}
+
+}
+
+
+
+
 
 % \newpage
 
