--- a/2021-1-C2-somas-2-4.tex
+++ b/2021-1-C2-somas-2-4.tex
@@ -30,11 +30,24 @@
 % «.title»			(to "title")
 % «.links»			(to "links")
 % «.exercicio-1»		(to "exercicio-1")
+%
 % «.contexto»			(to "contexto")
 % «.menos-de-50-tentativas»	(to "menos-de-50-tentativas")
 % «.como-se-virar»		(to "como-se-virar")
 % «.como-se-virar-2»		(to "como-se-virar-2")
 % «.como-se-virar-3»		(to "como-se-virar-3")
+% «.como-se-virar-4»		(to "como-se-virar-4")
+%
+% «.abusos-de-linguage»		(to "abusos-de-linguage")
+% «.abusos-de-linguagem»	(to "abusos-de-linguagem")
+% «.overloading-image»		(to "overloading-image")
+% «.overloading-image-2»	(to "overloading-image-2")
+% «.overloading-le»		(to "overloading-le")
+% «.overloading-le-2»		(to "overloading-le-2")
+% «.eu-amo-overloading»		(to "eu-amo-overloading")
+% «.eu-amo-overloading-2»	(to "eu-amo-overloading-2")
+% «.mais-sobre-bolinhas»	(to "mais-sobre-bolinhas")
+% «.conjuntos-vazios»		(to "conjuntos-vazios")
 %
 % «.djvuize»			(to "djvuize")
 
@@ -413,8 +426,8 @@ contas e texto em português}.
 \newpage
 
 % «contexto»  (to ".contexto")
-% (c2m211somas24p 9 "contexto")
-% (c2m211somas24a   "contexto")
+% (c2m211somas24p 12 "contexto")
+% (c2m211somas24a    "contexto")
 
 Quase todas as expressões matemáticas que usamos em C2
 
@@ -685,6 +698,10 @@ de um jeito que todo mundo entenda, etc...
 
 \newpage
 
+% «como-se-virar-4»  (to ".como-se-virar-4")
+% (c2m211somas24p 20 "como-se-virar-4")
+% (c2m211somas24a    "como-se-virar-4")
+
 {\bf Como se virar sem demonstrações formais? (4)}
 
 Repare que a pergunta ``isso aqui tá certo?''
@@ -716,14 +733,490 @@ ainda tem muita gente que ainda não aprendeu a visualizar
 
 sups, infs, e a definição de integral.
 
+\newpage
+
+%   ___                 _                 _ _             
+%  / _ \__   _____ _ __| | ___   __ _  __| (_)_ __   __ _ 
+% | | | \ \ / / _ \ '__| |/ _ \ / _` |/ _` | | '_ \ / _` |
+% | |_| |\ V /  __/ |  | | (_) | (_| | (_| | | | | | (_| |
+%  \___/  \_/ \___|_|  |_|\___/ \__,_|\__,_|_|_| |_|\__, |
+%                                                   |___/ 
+
+\thispagestyle{empty}
+
+\begin{center}
+
+\vspace*{1.2cm}
+
+\begin{tabular}{c}
+{\bf \large Parte 3:} \\
+{\bf \Large Abusos de linguagem} \\
+{\bf \Large e overloading} \\
+\end{tabular}
+
+\end{center}
+
+\newpage
+
+% «abusos-de-linguagem»  (to ".abusos-de-linguagem")
+% (c2m211somas24p 22 "abusos-de-linguagem")
+% (c2m211somas24a    "abusos-de-linguagem")
+
+{\bf Abusos de linguagem}
+
+Tem expressões que se a gente usar \ColorRed{entre aspas}
+
+quase todo mundo vai entender... por exemplo:
+
+\begin{quotation}
+
+  Para todo ponto $(x,y)$ no ``intervalo fechado''
+
+  indo do ponto $(7,1)$ ao ponto $(9,1)$ a proposição
+
+  $G(x,y)$ é verdadeira.
+
+\end{quotation}
+
+Um dos tipos mais comuns de abuso de linguagem
+
+é o \ColorRed{overloading} --- mas sem uma definição explícita
+
+de como a operação funciona no tipo novo.
+
+Um exemplo (famoso) de overloading:
+
+$$2 + 3 = 5
+  \qquad
+  \pmat{2 \\ 20} + \pmat{3 \\ 300} = \pmat{5 \\ 320}
+  \qquad
+  \qquad
+$$
+
+\newpage
+
+% «overloading-image»  (to ".overloading-image")
+% (c2m211somas24p 23 "overloading-image")
+% (c2m211somas24a    "overloading-image")
+
+{\bf Exemplo de overloading: imagens de conjuntos}
+
+Lembre que a partir de uma função $f:\R→\R$ qualquer
+
+nós definimos uma função $F$ que recebe subconjuntos
+
+de $\R$ e retorna subconjuntos de $\R$...
+%
+$$F(\{7,8,9\}) = \{f(7), f(8), f(9)\} = \{2, 1, 2\}$$
+
+Alguns livros usam a \ColorRed{mesma notação} pra $f$ e $F$:
+%
+$$f(\{7,8,9\}) = \{f(7), f(8), f(9)\} = \{2, 1, 2\}$$
+
+e aí pra decidir qual é o significado de $f$
+
+a gente precisa descobrir o tipo do argumento
+
+dela -- se é número ou conjunto de números. 
+
+\newpage
+
+% «overloading-image-2»  (to ".overloading-image-2")
+% (c2m211somas24p 24 "overloading-image-2")
+% (c2m211somas24a    "overloading-image-2")
+
+{\bf Exemplo de overloading: imagens de conjuntos (2)}
+
+Estes livros \ColorRed{estendem} o significado original da $f$ assim:
+%
+$$\begin{array}{l}
+  \text{Se $A⊂\R$ então:} \\
+  $f(A) = \setofst{f(a)}{a∈A}$ \\
+  \end{array}
+$$
+
+Eu estou evitando esse tipo de overloading no curso porque
+
+acho que ele deixaria muitos alunos meio desesperados...
+
+Só que várias pessoas tentaram inventar os seus próprios
+
+jeitos de fazer overloading... por exemplo:
+%
+$$\{2,3,4\} ≤ \{3,4,5\}$$
+
+Isso é muito ambíguo -- eu consigo pensar em vários
+
+jeitos de definir esse `$≤$' em conjuntos...
+
+\newpage
+
+% «overloading-le»  (to ".overloading-le")
+% (c2m211somas24p 25 "overloading-le")
+% (c2m211somas24a    "overloading-le")
+
+{\bf Exemplo de overloading ambíguo: `$≤$' em conjuntos}
+
+Se usarmos esta definição pro `$≤$' em conjuntos,
+%
+$$\begin{array}{l}
+  \text{Se $A,B⊂\R$ então:} \\
+  (A≤B) = (∀a∈A.∀b∈B.a≤b) \\
+  \end{array}
+$$
+
+então temos $(\{2,3,4\} ≤ \{3,4,5\}) = \F$.
+
+\bsk
+
+Se usarmos esta definição pro `$≤$' em conjuntos,
+%
+$$\begin{array}{l}
+  \text{Se $A,B⊂\R$ então:} \\
+  (A≤B) = (∀a∈A.∃b∈B.a≤b) \\
+  \end{array}
+$$
+
+então temos $(\{2,3,4\} ≤ \{3,4,5\}) = \V$.
+
+\newpage
+
+% «overloading-le-2»  (to ".overloading-le-2")
+% (c2m211somas24p 26 "overloading-le-2")
+% (c2m211somas24a    "overloading-le-2")
+
+{\bf Exemplo de overloading ambíguo: `$≤$' em conjuntos (2)}
+
+...e se usarmos esta outra definição pro `$≤$' em conjuntos,
+%
+$$\begin{array}{l}
+  \text{Se $A,B⊂\R$ então:} \\
+  (A≤B) = \setofst{a∈A}{∀b∈B.a≤b} \\
+  \end{array}
+$$
+
+então temos $(\{2,3,4\} ≤ \{3,4,5\}) = \{2,3\}$.
+
+\bsk
+
+$\frown$
 
 
+\newpage
+
+% «eu-amo-overloading»  (to ".eu-amo-overloading")
+% (c2m211somas24p 27 "eu-amo-overloading")
+% (c2m211somas24a    "eu-amo-overloading")
+
+{\bf ``Eu amo overloading! E agora?''}
+
+\msk
+
+Algumas pessoas:
+
+1) adoram usar overloadings nas suas contas informais,
+
+2) querem aprender a formalizar essas contas.
+
+O que elas podem fazer?
+
+\msk
+
+Respostas:
+
+a) Avisar que aquelas contas são informais
+
+b) traduzir os overloadings pra algo formal -- como:
+%
+$$\begin{array}{l}
+  \{2,3,4\} ≤ \{3,4,5\} \\[2.5pt]
+  \squigto \;\; ∀a∈\{2,3,4\}.∀b∈\{3,4,5\}.a≤b \\
+  \end{array}
+$$
+
+c) aprender a \ColorRed{definir overloadings formalmente}.
+
+\msk
+
+Aparentemente o (c) é o mais legal de todos, né?...
 
 
+\newpage
+
+% «eu-amo-overloading-2»  (to ".eu-amo-overloading-2")
+% (c2m211somas24p 28 "eu-amo-overloading-2")
+% (c2m211somas24a    "eu-amo-overloading-2")
+
+{\bf ``Eu amo overloading! E agora?'' (2)}
+
+\msk
+
+...só que pra
+
+\ssk
+
+\ColorRed{c) aprender a definir overloadings formalmente}
+
+\ssk
+
+você vai ter que aprender a testar as suas definições --
+
+e pra isso você vai ter que aprender o (b):
+
+\ssk
+
+\ColorRed{b) traduzir os overloadings pra algo formal}
+
+\ssk
+
+e você vai ter que testar as suas traduções em um
+
+monte de casos. A gente só consegue aprender o (c)
+
+depois de já ter virado faixa-preta em usar o `$∀$', o `$∃$',
+
+o `$\setofst{}{}$', e em tipar e em calcular expressões,
+
+e em fazer definições mais simples e testar elas...
+
+\msk
+
+Então você vai ter que começar aprendendo o (a) e o (b).
+
+\msk
+
+$\frown$
 
 
+\newpage
+
+% «mais-sobre-bolinhas»  (to ".mais-sobre-bolinhas")
+% (c2m211somas24p 29 "mais-sobre-bolinhas")
+% (c2m211somas24a    "mais-sobre-bolinhas")
+
+\thispagestyle{empty}
+
+\begin{center}
+
+\vspace*{1.2cm}
+
+\begin{tabular}{c}
+{\bf \large Parte 4:} \\
+{\bf \Large Mais sobre bolinhas} \\
+\end{tabular}
+
+\end{center}
+
+\newpage
+
+Lembre que estamos tentando aprender a calcular
+
+expressões como estas \ColorRed{visualmente}, por bolinhas...
+%
+$$\begin{array}{l}
+  ∀x∈\{1,2,3\}.x^2>4 \\
+  ∃x∈\{1,2,3\}.x^2>4 \\
+  \setofst{x∈\{1,2,3\}}{x^2>4} \\
+  \end{array}
+  \qquad
+  \begin{array}{l}
+  ∀x∈[1,3].x^2>4 \\
+  ∃x∈[1,3].x^2>4 \\
+  \setofst{x∈[1,3]}{x^2>4} \\
+  \end{array}
+$$
+
+...porque não vai dar tempo de todo mundo aprender a
+
+calculá-las via demonstrações formais. Então todo mundo
+
+vai ter que aprender os métodos visuais \ColorRed{primeiro}, e quem
+
+conseguir aprendê-los pode vir discutir demonstrações
+
+formais num outro grupo do Telegram.
+
+\newpage
+
+Lembre também que se você calcular coisas via bolinhas
+
+em cursos de outros professores eles podem não entender
+
+e podem ficar putos. Considere que o método das bolinhas
+
+é principalmente pra você aprender a calcular certas coisas
+
+\ColorRed{de cabeça} -- ou em rascunhos no canto do papel.
+
+\newpage
+
+Lembre que pra calcular estas expressões
+
+$$\begin{array}{l}
+  ∀x∈\{1,2,3\}.x^2>4 \\
+  ∃x∈\{1,2,3\}.x^2>4 \\
+  \setofst{x∈\{1,2,3\}}{x^2>4} \\
+  \end{array}
+$$
+
+nós podemos \ColorRed{começar} representando os resultados
+
+da expressão $x^2>4$ nos três valores de $x$ que são
+
+``gerados'' pelo $x∈\{1,2,3\}$...
+%
+$$\begin{array}{c}
+    \unitlength=20pt
+    \celllower=2.5pt%
+    \def\cellfont{\scriptsize}%
+    %
+    \vcenter{\hbox{%
+      \beginpicture(-1,-1)(4,1)
+      \pictgrid%
+      \pictpiecewise{(1,0)o (2,0)o (3,0)c}%
+      \pictaxes%
+      \end{picture}%
+    }}
+  \end{array}
+$$
 
 
+Lembre que a gente viu ``geradores'' e ``filtros'' aqui:
+
+\ssk
+
+{\footnotesize
+
+% (mpgp 8 "comprehension")
+% (mpga   "comprehension")
+% http://angg.twu.net/LATEX/material-para-GA.pdf#page=8
+\url{http://angg.twu.net/LATEX/material-para-GA.pdf#page=8}
+
+}
+
+\newpage
+
+A expressão
+%
+$$∀x∈\{1,2,3\}.x^2>4$$
+
+é \ColorRed{verdadeira se e só se todas} as bolinhas são pretas.
+
+A expressão
+%
+$$∃x∈\{1,2,3\}.x^2>4$$
+
+é \ColorRed{verdadeira se e só se alguma} bolinha é preta.
+
+E o resultado de
+%
+$$\setofst{x∈\{1,2,3\}}{x^2>4}$$
+
+é o \ColorRed{conjunto} de todos os `$x$'zes cujas bolinhas são pretas:
+
+$$\setofst{x∈\{1,2,3\}}{x^2>4} = \{3\}.$$
+
+\newpage
+
+{\bf E pra conjuntos infinitos?}
+
+Pra conjuntos infinitos --- como o intervalo $[1,3]$ ---
+
+nós podemos fazer algo parecido, mas vamos ter
+
+que fazer um desenho que \ColorRed{finja} que tem infinitas
+
+bolinhas... por exemplo:
+
+$$\begin{array}{c}
+    \unitlength=25pt
+    \celllower=2.5pt%
+    \def\cellfont{\scriptsize}%
+    %
+    \vcenter{\hbox{%
+      \beginpicture(-1,-1)(4,1)
+      \pictgrid%
+      \pictpiecewise{(1.0,0)o (1.2,0)o (1.4,0)o (1.6,0)o (1.8,0)o
+                     (2.0,0)o (2.2,0)c (2.4,0)c (2.6,0)c (2.8,0)c
+                     (3.0,0)c}%
+      \pictaxes%
+      \end{picture}%
+    }}
+  \end{array}
+$$
+
+Se fizermos um desenho razoável um leitor com uma certa
+
+boa vontade vai conseguir entender que temos bolinhas
+
+brancas em $x∈[1,2]$ e bolinhas pretas em $x∈(2,3]$...
+
+\bsk
+
+...e aí $\setofst{x∈[1,3]}{x^2>4} = (2,3]$. \quad \smile
+
+
+\newpage
+
+% «conjuntos-vazios»  (to ".conjuntos-vazios")
+% (c2m211somas24p 35 "conjuntos-vazios")
+% (c2m211somas24a    "conjuntos-vazios")
+
+{\bf E pra conjuntos vazios?}
+
+Você lembra porque a gente define que $2^0=1$?
+
+É porque o 1 é o elemento neutro da multiplicação,
+
+e aí a gente tem:
+%
+$$\begin{array}{rclcl}
+  2^3·2^2 &=& (2·2·2)·(2·2)   &=& 2^5 \\
+  2^4·2^1 &=& (2·2·2·2)·(2)   &=& 2^5 \\
+  2^5·2^0 &=& (2·2·2·2·2)·2^0 \\
+          &=& (2·2·2·2·2)·1 \\
+          &=& (2·2·2·2·2)     &=& 2^5 \\
+  \end{array}
+$$
+
+A gente vai ter algo assim
+
+pro `$∀$' e pro `$∃$' também:
+
+$(∀x∈∅.P(x)) = \V$ \;\; (porque $\V$ é o elemento neutro do $∧$) 
+
+$(∃x∈∅.P(x)) = \F$ \;\;\, (porque $\F$ é o elemento neutro do $∨$)
+
+\newpage
+
+{\bf E pra conjuntos vazios? (2)}
+
+Veja:
+%
+\def\myfa#1{(∀x∈\{#1\}.P(x))}
+\def\myex#1{(∃x∈\{#1\}.P(x))}
+\def\myfae {(∀x∈∅.P(x))}
+\def\myexe {(∃x∈∅.P(x))}
+%
+$$\scalebox{0.8}{$
+  \begin{array}{rcl}
+  \myfa{2,4} ∧ \myfa{9,20} &=& (P(2)∧P(4))∧(P(9)∧P(20)) \\
+  \myfa{2,4,9} ∧ \myfa{20} &=& (P(2)∧P(4)∧P(9))∧(P(20)) \\
+  \myfa{2,4,9,20} ∧ \myfae &=& (P(2)∧P(4)∧P(9)∧P(20))∧\V \\
+                           &=& (P(2)∧P(4)∧P(9)∧P(20)) \\
+  \\
+  \myex{2,4} ∨ \myex{9,20} &=& (P(2)∨P(4))∨(P(9)∨P(20)) \\
+  \myex{2,4,9} ∨ \myex{20} &=& (P(2)∨P(4)∨P(9))∨(P(20)) \\
+  \myex{2,4,9,20} ∨ \myexe &=& (P(2)∨P(4)∨P(9)∨P(20))∨\F \\
+                           &=& (P(2)∨P(4)∨P(9)∨P(20)) \\
+  \end{array}
+  $}
+$$
+
+
+\newpage
+
+\phantom{a}
 
 %\printbibliography
 
